# FilumReforge

./: .gitignore  AGENT_RULES.md  INIT_PROMPT.md  README.md  workflow-graph-engine-upgrade-guidance-report.md
backend/: .env.example  .env.production.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  coverage.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/scripts/: docker_api_smoke_video.py  start-dev.sh  start-prod.sh  start-worker.sh
backend/tests/: conftest.py  postgres_migration_support.py  test_api.py  test_b12_legacy_e_removal.py  test_error_handlers.py  test_f21_cross_department_routing.py  test_f23_template_chain.py  test_f24_graph_template_schedules.py  test_f29_admin_task_archive.py  test_health.py  test_migrations.py  test_models.py  test_p1_10_template_review_safety.py  test_recent_regressions.py  test_s01_task_statistics.py  test_sample_data_service.py  test_services.py  test_settings.py  test_standalone_work_item.py  test_standalone_work_item_e2e.py  test_standalone_work_item_postgres_concurrency.py  test_task_center_management_tracking.py  test_tce_phase1_graph_projection_inbox.py  test_tce_phase2_batch_and_snapshot.py  test_tce_phase3_admin_stats_pagination.py  test_tce_phase4_multi_department_instantiation.py  test_tce_phase5_tc_p3_cleanup.py  test_upload_limits.py  test_w08_streaming_aggregate_skip.py  test_workers.py  test_workflow_definition_snapshot_iteration1.py  test_workflow_graph_iteration0_gaps.py  test_workflow_graph_iteration2.py  test_workflow_graph_iteration3.py  (+27 more)
(+633 files in other folders)
