[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filum-backend"
version = "0.1.0"
description = "Backend service for Project Filum"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.16,<2.0",
  "arq>=0.27,<0.28",
  "asyncpg>=0.30,<1.0",
  "croniter>=3.0,<4.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.116,<0.117",
  "openai>=2.6,<3.0",
  "pgvector>=0.4,<0.5",
  "pywebpush>=2.0,<3.0",
  "pwdlib[argon2]>=0.3,<1.0",
  "pyjwt>=2.10,<3.0",
  "python-multipart>=0.0.20,<0.1",
  "pydantic-settings>=2.10,<3.0",
  "redis>=5.0,<6.0",
  "sqlalchemy>=2.0.44,<3.0",
  "uvicorn>=0.35,<0.36",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "httpx>=0.28,<0.29",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.2,<2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
